cli/tests/snapshot/inputs/errors/nested_annotated_record_pattern_typecheck_fail.ncl
# capture = 'stderr'
# command = ['eval']
(
  let { x = { a : Number }} = { x = { a = "" }} in
  x
) : _
